# unread-bell

./: Cargo.toml  LICENSE  docs.lua  rustfmt.toml
hooks/discord/: .gitignore  .prettierrc.json  inject.js  lib.js  mainScreen.patch  mainScreenPreload.patch  package.json  patcher  preload.js
src/: main.rs  model.rs
