[package]
name = "unread-bell"
version = "0.2.0"
edition = "2021"
description = "Advanced Discord notifications wherever you want them"
license = "MIT"

[[bin]]
name = "unread-bell"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = "2.33"
base64 = "0.13"
tungstenite = { version = "0.16", features = ["native-tls"] }

shellexpand = "2.1"
mlua = { version = "0.7", features = ["luajit", "vendored", "serialize", "send"] }

[profile.release]
lto = true
panic = "abort"
